# pixelbot

./: .gitignore  Cargo.toml  LICENSE  README.md  config.cfg  config.toml
src/: capture.rs  config.rs  coord.rs  gui.rs  image.rs  img_funcs.rs  input.rs  logging.rs  main.rs  pixel_bot.rs
src/image/: blend.rs  image_ops.rs  mod.rs
