[package]
name = "pixelbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = "0.5"
minifb = "0.20"
interception = "0.1.2"
rand = "0.8.4"
fltk = { version = "^1.2", features = ["fltk-bundled"] }
num = "0.4.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
spin_sleep = "1.0.0" 
line_drawing = "1.0.0"
crossbeam = "0.8.1"

[dependencies.windows]
version = "0.28.0"
features = ["Win32_UI_Input_KeyboardAndMouse","Win32_UI_HiDpi","Win32_Foundation","Win32_UI_WindowsAndMessaging","Win32_UI_TextServices"]

[profile.release]
debug = true
# lto = true

[profile.dev]
opt-level = 3

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false