[package]
name = "pixelbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interception = "0.1.2"
rand = "0.8.4"
fltk = { version = "^1.2"}
num = "0.4.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
spin_sleep = "1.0.0" 
line_drawing = "1.0.0"
crossbeam = "0.8.1"
rustc-hash = "1.1.0"

[dependencies.windows]
version = "0.28.0"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemServices",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi"
]

[profile.release]
lto = true

[profile.dev]
opt-level = 3

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false